load and preprocess datasets

--- a/embeddings/create_embeddings.ipynb
+++ b/embeddings/create_embeddings.ipynb
@@ -13,15 +13,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "import torch\n",
     "from transformers import AutoModel, AutoTokenizer\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current device: 0 (cuda) -> NVIDIA GeForce GTX 1050 Ti\n"
+     ]
+    }
+   ],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Current device: {torch.cuda.current_device()} ({device}) -> {torch.cuda.get_device_name(0)}\")"
@@ -40,9 +49,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path = 'Alibaba-NLP/gte-base-en-v1.5'\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_path)\n",
-    "model = AutoModel.from_pretrained(model_path, trust_remote_code=True).to(device)"
+    "model_paths = ['Alibaba-NLP/gte-base-en-v1.5', 'Alibaba-NLP/gte-large-en-v1.5', 'Alibaba-NLP/gte-Qwen2-1.5B-instruct']\n",
+    "dataset_names = [\"quora\", \"covid\", \"touche\"]\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_paths[0])\n",
+    "model = AutoModel.from_pretrained(model_paths[0], trust_remote_code=True).to(device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "bat"
+    }
+   },
+   "source": [
+    "Data sources: \\\n",
+    "https://huggingface.co/datasets/mteb/quora \\\n",
+    "https://huggingface.co/datasets/mteb/trec-covid \\\n",
+    "https://huggingface.co/datasets/mteb/touche2020"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data(dataset_name, path, subset_type):\n",
+    "    file_name = path.format(dataset_name) + f\"{subset_type}.jsonl\"\n",
+    "\n",
+    "    with open(file_name, \"r\") as json_file:\n",
+    "        data = [\n",
+    "            \"\\n\".join({k: v for k, v in json.loads(line).items() if k != \"_id\"}.values()).strip(\"\\n\")\n",
+    "            for line in json_file\n",
+    "        ]\n",
+    "    \n",
+    "    return data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"../data/datasets/{}/\"\n",
+    "data = load_data(\"quora\", path, \"corpus\")"
    ]
   },
   {
@@ -54,33 +106,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_texts = [\n",
-    "    \"what is the capital of China?\",\n",
-    "    \"how to implement quick sort in python?\",\n",
-    "    \"Beijing\",\n",
-    "    \"sorting algorithms\"\n",
-    "] * 100\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for text in input_texts:\n",
+    "for text in data[:3]:\n",
     "    # tokenize the input texts\n",
     "    batch_dict = tokenizer([text], max_length=8192, padding=True, truncation=True, return_tensors='pt').to(device)\n",
     "\n",
     "    # get embeddings\n",
     "    outputs = model(**batch_dict)\n",
-    "    embeddings = outputs.last_hidden_state[:, 0]\n",
+    "    embeddings = outputs.last_hidden_state[:, 0][0].cpu().detach().numpy()\n",
     "\n",
-    "    del batch_dict,outputs, embeddings"
+    "    # del batch_dict,outputs, embeddings"
    ]
   }
  ],
