store timestamps of experiment runs

--- a/language_model/language_model.ipynb
+++ b/language_model/language_model.ipynb
@@ -61,13 +61,16 @@
    "outputs": [],
    "source": [
     "def ask_model(model_name, prompt):\n",
-    "    response = ollama.chat(model=model_name, messages=[\n",
-    "    {\n",
-    "        'role': 'user',\n",
-    "        'content': prompt,\n",
-    "    },\n",
-    "    ])\n",
-    "    \n",
+    "    response = ollama.chat(\n",
+    "        model=model_name,\n",
+    "        messages=[\n",
+    "            {\n",
+    "                \"role\": \"user\",\n",
+    "                \"content\": prompt,\n",
+    "            },\n",
+    "        ],\n",
+    "    )\n",
+    "\n",
     "    return response"
    ]
   },
