generate embeddings for queries

--- a/analysis/rq3_analysis.ipynb
+++ b/analysis/rq3_analysis.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# RQ3 - Embedding generation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 0. Import libraries"
    ]
   },
