count number of tokens

--- a/retrieval_augmented_generation/language_model.ipynb
+++ b/retrieval_augmented_generation/language_model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = \"gemma2:2b\"\n",
+    "model_name = \"qwen2.5:0.5b\"\n",
     "ollama.pull(model_name)\n",
     "print_model_information(model_name)"
    ]
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
    "outputs": [],
    "source": [
     "prompt = \"Hello\"\n",
-    "ask_model(model_name, prompt)"
+    "ask_model(model_name, prompt)[\"message\"][\"content\"]"
    ]
   },
   {
