--- a/retrieval_augmented_generation/language_model.ipynb
+++ b/retrieval_augmented_generation/language_model.ipynb
@@ -42,9 +42,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = \"qwen2.5:0.5b\"\n",
+    "model_name = \"hf.co/bartowski/Llama-3.2-1B-Instruct-GGUF:Q4_0\"\n",
     "ollama.pull(model_name)\n",
     "print_model_information(model_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"asdaasda\".split(\"/\")"
    ]
   },
   {
