--- a/analysis/rq1_analysis.ipynb
+++ b/analysis/rq1_analysis.ipynb
@@ -11,9 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +70,9 @@
     "    \"gte_small_cqadupstack_webmasters_milvus\",\n",
     "    \"gte_base_cqadupstack_webmasters_milvus\",\n",
     "    \"gte_large_cqadupstack_webmasters_milvus\",\n",
-    "]"
+    "]\n",
+    "\n",
+    "dataset_no_rows = [3956, 10080, 17911]"
    ]
   },
   {
@@ -73,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,11 +108,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "index_embeeding_variation_runs = get_variation_runs_data(\n",
+    "index_embedding_variation_runs = get_variation_runs_data(\n",
     "    indexing_runs_data,\n",
     "    small_embeddings,\n",
     "    medium_embeddings,\n",
@@ -113,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -179,18 +190,18 @@
        "gte-small                1416.510320        87.978683     71.679724"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "index_embeeding_variation_runs.groupby(\"embedding_model\").mean()"
+    "index_embedding_variation_runs.groupby(\"embedding_model\").mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -256,13 +267,13 @@
        "gte-small                 820.785662        51.120953     41.237786"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "index_embeeding_variation_runs.groupby(\"embedding_model\").std()"
+    "index_embedding_variation_runs.groupby(\"embedding_model\").std()"
    ]
   },
   {
@@ -283,7 +294,7 @@
    ],
    "source": [
     "compute_kruskal_wallis(\n",
-    "    index_embeeding_variation_runs,\n",
+    "    index_embedding_variation_runs,\n",
     "    \"embedding_model\",\n",
     "    [\"gte-small\", \"gte-medium\", \"gte-large\"],\n",
     "    \"duration [s]\",\n",
@@ -308,7 +319,7 @@
    ],
    "source": [
     "compute_kruskal_wallis(\n",
-    "    index_embeeding_variation_runs,\n",
+    "    index_embedding_variation_runs,\n",
     "    \"embedding_model\",\n",
     "    [\"gte-small\", \"gte-medium\", \"gte-large\"],\n",
     "    \"IA Cores Energy [J]\",\n",
@@ -579,7 +590,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "querying_embeeding_variation_runs = get_variation_runs_data(\n",
+    "querying_embedding_variation_runs = get_variation_runs_data(\n",
     "    querying_runs_data,\n",
     "    small_embeddings,\n",
     "    medium_embeddings,\n",
@@ -663,7 +674,7 @@
     }
    ],
    "source": [
-    "querying_embeeding_variation_runs.groupby(\"embedding_model\").mean()"
+    "querying_embedding_variation_runs.groupby(\"embedding_model\").mean()"
    ]
   },
   {
@@ -740,7 +751,7 @@
     }
    ],
    "source": [
-    "querying_embeeding_variation_runs.groupby(\"embedding_model\").std()"
+    "querying_embedding_variation_runs.groupby(\"embedding_model\").std()"
    ]
   },
   {
@@ -761,7 +772,7 @@
    ],
    "source": [
     "compute_kruskal_wallis(\n",
-    "    querying_embeeding_variation_runs,\n",
+    "    querying_embedding_variation_runs,\n",
     "    \"embedding_model\",\n",
     "    [\"gte-small\", \"gte-medium\", \"gte-large\"],\n",
     "    \"duration [s]\",\n",
@@ -786,7 +797,7 @@
    ],
    "source": [
     "compute_kruskal_wallis(\n",
-    "    querying_embeeding_variation_runs,\n",
+    "    querying_embedding_variation_runs,\n",
     "    \"embedding_model\",\n",
     "    [\"gte-small\", \"gte-medium\", \"gte-large\"],\n",
     "    \"IA Cores Energy [J]\",\n",
