--- a/analysis/rq3_analysis.ipynb
+++ b/analysis/rq3_analysis.ipynb
@@ -11,9 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -30,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +150,7 @@
        "gte-small         89.62 ± 0.09  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -231,29 +240,25 @@
        "gte-large            6.932061  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "total_consumption_per_embedding_type = embedding_variation_runs.groupby(\n",
-    "    \"embedding_model\"\n",
-    ").sum()\n",
+    "total_consumption_per_embedding_type = embedding_variation_runs.groupby(\"embedding_model\").sum()\n",
     "total_consumption_smallest_embedding = (\n",
     "    embedding_variation_runs.groupby(\"embedding_model\").sum().iloc[2, :]\n",
     ")\n",
     "\n",
-    "consumption_ratio = (\n",
-    "    total_consumption_per_embedding_type / total_consumption_smallest_embedding\n",
-    ")\n",
+    "consumption_ratio = total_consumption_per_embedding_type / total_consumption_smallest_embedding\n",
     "consumption_ratio = consumption_ratio.sort_values(\"duration [s]\")\n",
     "consumption_ratio"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +279,7 @@
        "Text(0.5, 1.0, 'Measurements in relation with gte-small embedding model')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -300,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -309,18 +314,20 @@
        "WilcoxonResult(statistic=np.float64(0.0), pvalue=np.float64(0.0009765625))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "compute_wilcoxon(embedding_variation_runs, \"gte-small\", \"gte-base\", \"GPU Energy [J]\", \"embedding_model\")"
+    "compute_wilcoxon(\n",
+    "    embedding_variation_runs, \"gte-small\", \"gte-base\", \"GPU Energy [J]\", \"embedding_model\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -329,18 +336,20 @@
        "WilcoxonResult(statistic=np.float64(0.0), pvalue=np.float64(0.0009765625))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "compute_wilcoxon(embedding_variation_runs, \"gte-base\", \"gte-large\", \"GPU Energy [J]\", \"embedding_model\")"
+    "compute_wilcoxon(\n",
+    "    embedding_variation_runs, \"gte-base\", \"gte-large\", \"GPU Energy [J]\", \"embedding_model\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -349,18 +358,20 @@
        "WilcoxonResult(statistic=np.float64(0.0), pvalue=np.float64(0.0009765625))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "compute_wilcoxon(embedding_variation_runs, \"gte-small\", \"gte-base\", \"duration [s]\", \"embedding_model\")"
+    "compute_wilcoxon(\n",
+    "    embedding_variation_runs, \"gte-small\", \"gte-base\", \"duration [s]\", \"embedding_model\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -369,13 +380,15 @@
        "WilcoxonResult(statistic=np.float64(0.0), pvalue=np.float64(0.0009765625))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "compute_wilcoxon(embedding_variation_runs, \"gte-base\", \"gte-large\", \"duration [s]\", \"embedding_model\")"
+    "compute_wilcoxon(\n",
+    "    embedding_variation_runs, \"gte-base\", \"gte-large\", \"duration [s]\", \"embedding_model\"\n",
+    ")"
    ]
   }
  ],
