--- a/analysis/rq4_analysis.ipynb
+++ b/analysis/rq4_analysis.ipynb
@@ -10,23 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
@@ -46,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +254,7 @@
        "[500 rows x 8 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +291,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -323,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +322,7 @@
        "KruskalResult(statistic=np.float64(97.78524838323347), pvalue=np.float64(2.912322428579741e-20))"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +344,7 @@
        "KruskalResult(statistic=np.float64(106.52828838323376), pvalue=np.float64(4.001188872629205e-22))"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,6 +359,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 WilcoxonResult(statistic=np.float64(1787.0), pvalue=np.float64(0.0055826278200956985))\n",
+      "2 WilcoxonResult(statistic=np.float64(1341.0), pvalue=np.float64(2.3408224806189123e-05))\n",
+      "3 WilcoxonResult(statistic=np.float64(1171.0), pvalue=np.float64(1.6160410549258872e-06))\n",
+      "4 WilcoxonResult(statistic=np.float64(1652.0), pvalue=np.float64(0.0013425700893382885))\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(4):\n",
+    "    print(i + 1, compute_wilcoxon(gemma_retrieved_docs_variation_runs, i + 1,  i + 2, \"duration [s]\", \"number retrieved docs\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 WilcoxonResult(statistic=np.float64(1893.0), pvalue=np.float64(0.01488935705769213))\n",
+      "2 WilcoxonResult(statistic=np.float64(1238.0), pvalue=np.float64(4.819343444963108e-06))\n",
+      "3 WilcoxonResult(statistic=np.float64(1106.0), pvalue=np.float64(5.331713953222686e-07))\n",
+      "4 WilcoxonResult(statistic=np.float64(1603.0), pvalue=np.float64(0.0007618393155956095))\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(4):\n",
+    "    print(i + 1, compute_wilcoxon(gemma_retrieved_docs_variation_runs, i + 1,  i + 2, \"Total Energy [J]\", \"number retrieved docs\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -377,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +627,7 @@
        "[500 rows x 8 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +664,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -654,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +695,7 @@
        "KruskalResult(statistic=np.float64(96.66519473053904), pvalue=np.float64(5.041428937903588e-20))"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +717,7 @@
        "KruskalResult(statistic=np.float64(86.40331592814391), pvalue=np.float64(7.64182163532305e-18))"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,6 +732,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 WilcoxonResult(statistic=np.float64(1493.0), pvalue=np.float64(0.00019382545252393638))\n",
+      "2 WilcoxonResult(statistic=np.float64(1327.0), pvalue=np.float64(1.9016667139855487e-05))\n",
+      "3 WilcoxonResult(statistic=np.float64(1691.0), pvalue=np.float64(0.0020682327287513905))\n",
+      "4 WilcoxonResult(statistic=np.float64(2386.0), pvalue=np.float64(0.31635102717936164))\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(4):\n",
+    "    print(i + 1, compute_wilcoxon(llama_retrieved_docs_variation_runs, i + 1,  i + 2, \"duration [s]\", \"number retrieved docs\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 WilcoxonResult(statistic=np.float64(1703.0), pvalue=np.float64(0.0023544347688783615))\n",
+      "2 WilcoxonResult(statistic=np.float64(1292.0), pvalue=np.float64(1.1203178459018643e-05))\n",
+      "3 WilcoxonResult(statistic=np.float64(1703.0), pvalue=np.float64(0.0023544347688783615))\n",
+      "4 WilcoxonResult(statistic=np.float64(2338.0), pvalue=np.float64(0.26012283897418387))\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(4):\n",
+    "    print(i + 1, compute_wilcoxon(llama_retrieved_docs_variation_runs, i + 1,  i + 2, \"Total Energy [J]\", \"number retrieved docs\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -708,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +1013,7 @@
        "[1000 rows x 9 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1223,7 @@
        "      5                       1690.76 ± 56.45    377.31 ± 28.04  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1245,7 @@
        "Text(0.5, 1.0, 'Energy consumption as a function of language model and number of retrieved documents')"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1202,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1285,7 @@
        "Text(0.5, 1.0, 'Duration as a function of language model and number of retrieved documents')"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1242,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1303,7 +1377,7 @@
        "duration [s]              2.567771"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1321,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1404,7 @@
        "WilcoxonResult(statistic=np.float64(10611.0), pvalue=np.float64(1.4559261500692121e-58))"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1343,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1352,7 +1426,7 @@
        "WilcoxonResult(statistic=np.float64(20738.0), pvalue=np.float64(1.0478274078420251e-38))"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
