update analysis to match the presentation slides

--- a/analysis/rq2_analysis.ipynb
+++ b/analysis/rq2_analysis.ipynb
@@ -40,13 +40,14 @@
     "        \"Total DRAM Power [W]\",\n",
     "        \"IA Cores Power [W]\",\n",
     "    ],\n",
+    "    idle_state=\"Docker running\",\n",
     ")\n",
     "indexing_runs_data = compute_total_energy_per_run(indexing_experiments_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,12 +58,16 @@
     "    [\"gte_base_cqadupstack_webmasters_weaviate\"],\n",
     "    \"database\",\n",
     "    [\"milvus\", \"qdrant\", \"weaviate\"],\n",
+    ")\n",
+    "\n",
+    "index_db_variation_runs[\"CPU Cores and DRAM Energy [J]\"] = (\n",
+    "    index_db_variation_runs[\"CPU Cores Energy [J]\"] + index_db_variation_runs[\"DRAM Energy [J]\"]\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -86,12 +91,14 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>IA Cores Energy [J]</th>\n",
+       "      <th>CPU Cores Energy [J]</th>\n",
        "      <th>DRAM Energy [J]</th>\n",
        "      <th>duration [s]</th>\n",
+       "      <th>CPU Cores and DRAM Energy [J]</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>database</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -100,35 +107,44 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>milvus</th>\n",
-       "      <td>2625.1 ± 114.38</td>\n",
-       "      <td>162.91 ± 7.08</td>\n",
+       "      <td>2142.85 ± 115.0</td>\n",
+       "      <td>100.7 ± 6.63</td>\n",
        "      <td>132.04 ± 2.16</td>\n",
+       "      <td>2243.56 ± 121.39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>qdrant</th>\n",
-       "      <td>3938.37 ± 75.24</td>\n",
-       "      <td>288.41 ± 7.3</td>\n",
+       "      <td>2333.64 ± 30.18</td>\n",
+       "      <td>106.59 ± 3.2</td>\n",
        "      <td>351.55 ± 18.21</td>\n",
+       "      <td>2440.23 ± 33.18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>weaviate</th>\n",
-       "      <td>237.56 ± 5.34</td>\n",
-       "      <td>18.67 ± 0.5</td>\n",
+       "      <td>199.29 ± 4.74</td>\n",
+       "      <td>14.0 ± 0.43</td>\n",
        "      <td>10.99 ± 0.19</td>\n",
+       "      <td>213.28 ± 5.16</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         IA Cores Energy [J] DRAM Energy [J]    duration [s]\n",
-       "database                                                    \n",
-       "milvus       2625.1 ± 114.38   162.91 ± 7.08   132.04 ± 2.16\n",
-       "qdrant       3938.37 ± 75.24    288.41 ± 7.3  351.55 ± 18.21\n",
-       "weaviate       237.56 ± 5.34     18.67 ± 0.5    10.99 ± 0.19"
+       "         CPU Cores Energy [J] DRAM Energy [J]    duration [s]  \\\n",
+       "database                                                        \n",
+       "milvus        2142.85 ± 115.0    100.7 ± 6.63   132.04 ± 2.16   \n",
+       "qdrant        2333.64 ± 30.18    106.59 ± 3.2  351.55 ± 18.21   \n",
+       "weaviate        199.29 ± 4.74     14.0 ± 0.43    10.99 ± 0.19   \n",
+       "\n",
+       "         CPU Cores and DRAM Energy [J]  \n",
+       "database                                \n",
+       "milvus                2243.56 ± 121.39  \n",
+       "qdrant                 2440.23 ± 33.18  \n",
+       "weaviate                 213.28 ± 5.16  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +172,7 @@
     }
    ],
    "source": [
-    "compute_wilcoxon(index_db_variation_runs, \"weaviate\", \"milvus\", \"IA Cores Energy [J]\", \"database\")"
+    "compute_wilcoxon(index_db_variation_runs, \"weaviate\", \"milvus\", \"CPU Cores Energy [J]\", \"database\")"
    ]
   },
   {
@@ -167,7 +183,7 @@
     {
      "data": {
       "text/plain": [
-       "WilcoxonResult(statistic=np.float64(0.0), pvalue=np.float64(0.0009765625))"
+       "WilcoxonResult(statistic=np.float64(4.0), pvalue=np.float64(0.0068359375))"
       ]
      },
      "execution_count": 6,
@@ -176,7 +192,7 @@
     }
    ],
    "source": [
-    "compute_wilcoxon(index_db_variation_runs, \"milvus\", \"qdrant\", \"IA Cores Energy [J]\", \"database\")"
+    "compute_wilcoxon(index_db_variation_runs, \"milvus\", \"qdrant\", \"CPU Cores Energy [J]\", \"database\")"
    ]
   },
   {
@@ -257,8 +273,8 @@
     "    [\"milvus\", \"qdrant\", \"weaviate\"],\n",
     ")\n",
     "\n",
-    "query_db_variation_runs[\"IA Cores and DRAM Energy [J]\"] = (\n",
-    "    query_db_variation_runs[\"IA Cores Energy [J]\"] + query_db_variation_runs[\"DRAM Energy [J]\"]\n",
+    "query_db_variation_runs[\"CPU Cores and DRAM Energy [J]\"] = (\n",
+    "    query_db_variation_runs[\"CPU Cores Energy [J]\"] + query_db_variation_runs[\"DRAM Energy [J]\"]\n",
     ")"
    ]
   },
@@ -288,10 +304,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>IA Cores Energy [J]</th>\n",
+       "      <th>CPU Cores Energy [J]</th>\n",
        "      <th>DRAM Energy [J]</th>\n",
        "      <th>duration [s]</th>\n",
-       "      <th>IA Cores and DRAM Energy [J]</th>\n",
+       "      <th>CPU Cores and DRAM Energy [J]</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>database</th>\n",
@@ -304,41 +320,41 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>milvus</th>\n",
-       "      <td>155.71 ± 3.45</td>\n",
-       "      <td>9.7 ± 0.22</td>\n",
+       "      <td>120.4 ± 3.3</td>\n",
+       "      <td>4.8 ± 0.19</td>\n",
        "      <td>9.93 ± 0.11</td>\n",
-       "      <td>165.41 ± 3.67</td>\n",
+       "      <td>125.2 ± 3.48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>qdrant</th>\n",
-       "      <td>155.37 ± 9.42</td>\n",
-       "      <td>11.17 ± 0.65</td>\n",
+       "      <td>125.71 ± 11.09</td>\n",
+       "      <td>7.08 ± 0.8</td>\n",
        "      <td>8.91 ± 0.18</td>\n",
-       "      <td>166.54 ± 10.07</td>\n",
+       "      <td>132.78 ± 11.89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>weaviate</th>\n",
-       "      <td>32.81 ± 0.42</td>\n",
-       "      <td>2.29 ± 0.03</td>\n",
+       "      <td>25.02 ± 0.47</td>\n",
+       "      <td>1.24 ± 0.04</td>\n",
        "      <td>2.14 ± 0.02</td>\n",
-       "      <td>35.1 ± 0.45</td>\n",
+       "      <td>26.26 ± 0.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         IA Cores Energy [J] DRAM Energy [J] duration [s]  \\\n",
-       "database                                                    \n",
-       "milvus         155.71 ± 3.45      9.7 ± 0.22  9.93 ± 0.11   \n",
-       "qdrant         155.37 ± 9.42    11.17 ± 0.65  8.91 ± 0.18   \n",
-       "weaviate        32.81 ± 0.42     2.29 ± 0.03  2.14 ± 0.02   \n",
+       "         CPU Cores Energy [J] DRAM Energy [J] duration [s]  \\\n",
+       "database                                                     \n",
+       "milvus            120.4 ± 3.3      4.8 ± 0.19  9.93 ± 0.11   \n",
+       "qdrant         125.71 ± 11.09      7.08 ± 0.8  8.91 ± 0.18   \n",
+       "weaviate         25.02 ± 0.47     1.24 ± 0.04  2.14 ± 0.02   \n",
        "\n",
-       "         IA Cores and DRAM Energy [J]  \n",
-       "database                               \n",
-       "milvus                  165.41 ± 3.67  \n",
-       "qdrant                 166.54 ± 10.07  \n",
-       "weaviate                  35.1 ± 0.45  "
+       "         CPU Cores and DRAM Energy [J]  \n",
+       "database                                \n",
+       "milvus                    125.2 ± 3.48  \n",
+       "qdrant                  132.78 ± 11.89  \n",
+       "weaviate                   26.26 ± 0.5  "
       ]
      },
      "execution_count": 11,
@@ -370,7 +386,7 @@
    ],
    "source": [
     "compute_wilcoxon(\n",
-    "    query_db_variation_runs, \"weaviate\", \"milvus\", \"IA Cores and DRAM Energy [J]\", \"database\"\n",
+    "    query_db_variation_runs, \"weaviate\", \"milvus\", \"CPU Cores and DRAM Energy [J]\", \"database\"\n",
     ")"
    ]
   },
@@ -382,7 +398,7 @@
     {
      "data": {
       "text/plain": [
-       "WilcoxonResult(statistic=np.float64(24.0), pvalue=np.float64(0.384765625))"
+       "WilcoxonResult(statistic=np.float64(21.0), pvalue=np.float64(0.2783203125))"
       ]
      },
      "execution_count": 13,
@@ -392,7 +408,7 @@
    ],
    "source": [
     "compute_wilcoxon(\n",
-    "    query_db_variation_runs, \"milvus\", \"qdrant\", \"IA Cores and DRAM Energy [J]\", \"database\"\n",
+    "    query_db_variation_runs, \"milvus\", \"qdrant\", \"CPU Cores and DRAM Energy [J]\", \"database\"\n",
     ")"
    ]
   },
@@ -404,7 +420,7 @@
     {
      "data": {
       "text/plain": [
-       "WilcoxonResult(statistic=np.float64(31.0), pvalue=np.float64(0.65234375))"
+       "WilcoxonResult(statistic=np.float64(34.0), pvalue=np.float64(0.75390625))"
       ]
      },
      "execution_count": 14,
@@ -414,7 +430,7 @@
    ],
    "source": [
     "compute_wilcoxon(\n",
-    "    query_db_variation_runs, \"qdrant\", \"milvus\", \"IA Cores and DRAM Energy [J]\", \"database\"\n",
+    "    query_db_variation_runs, \"qdrant\", \"milvus\", \"CPU Cores and DRAM Energy [J]\", \"database\"\n",
     ")"
    ]
   },
@@ -426,7 +442,7 @@
     {
      "data": {
       "text/plain": [
-       "KruskalResult(statistic=np.float64(0.5714285714285694), pvalue=np.float64(0.4496917979688917))"
+       "KruskalResult(statistic=np.float64(0.28000000000000114), pvalue=np.float64(0.5967012167293555))"
       ]
      },
      "execution_count": 15,
@@ -436,7 +452,7 @@
    ],
    "source": [
     "compute_kruskal_wallis(\n",
-    "    query_db_variation_runs, \"database\", [\"qdrant\", \"milvus\"], \"IA Cores and DRAM Energy [J]\"\n",
+    "    query_db_variation_runs, \"database\", [\"qdrant\", \"milvus\"], \"CPU Cores and DRAM Energy [J]\"\n",
     ")"
    ]
   },
