clean the code and store the figures

--- a/analysis/compute_idle_consumption.ipynb
+++ b/analysis/compute_idle_consumption.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Compute average idle consumption \n",
-    "When noting is running on the machine and when only Docker is running"
+    "When nothing is running on the machine and when only Docker is running"
    ]
   },
   {
