--- a/analysis/rq1_analysis.ipynb
+++ b/analysis/rq1_analysis.ipynb
@@ -11,18 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -32,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,9 +61,7 @@
     "    \"gte_small_cqadupstack_webmasters_milvus\",\n",
     "    \"gte_base_cqadupstack_webmasters_milvus\",\n",
     "    \"gte_large_cqadupstack_webmasters_milvus\",\n",
-    "]\n",
-    "\n",
-    "dataset_no_rows = [3956, 10080, 17911]"
+    "]"
    ]
   },
   {
@@ -84,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +84,7 @@
     "        \"IA Cores Power [W]\",\n",
     "    ],\n",
     ")\n",
-    "indexing_runs_data = compute_total_energy_per_run(indexing_experiments_data)\n"
+    "indexing_runs_data = compute_total_energy_per_run(indexing_experiments_data)"
    ]
   },
   {
@@ -561,7 +550,7 @@
     {
      "data": {
       "text/plain": [
-       "KruskalResult(statistic=np.float64(89.0), pvalue=np.float64(4.7194952715261225e-20))"
+       "KruskalResult(statistic=np.float64(45.26095238095235), pvalue=np.float64(1.4849405524962172e-10))"
       ]
      },
      "execution_count": 16,
@@ -574,7 +563,7 @@
     "    querying_embedding_variation_runs,\n",
     "    \"model\",\n",
     "    [\"gte-small\", \"gte-medium\", \"gte-large\"],\n",
-    "    \"model\",\n",
+    "    \"CPU Cores Energy [J]\",\n",
     ")"
    ]
   },
