--- a/analysis/rq3_analysis.ipynb
+++ b/analysis/rq3_analysis.ipynb
@@ -54,9 +54,9 @@
     "for embedding_model_name, data in runs_data.items():\n",
     "    data_embedding_variation = copy.deepcopy(data[\"measurements_per_run\"])\n",
     "    data_embedding_variation[\"duration [s]\"] = data[\"durations_per_run\"]\n",
-    "    data_embedding_variation[\"model\"] = embedding_model_name.replace(\n",
-    "        \"_nfcorpus\", \"\"\n",
-    "    ).replace(\"_\", \"-\")\n",
+    "    data_embedding_variation[\"model\"] = embedding_model_name.replace(\"_nfcorpus\", \"\").replace(\n",
+    "        \"_\", \"-\"\n",
+    "    )\n",
     "\n",
     "    embedding_variation_runs.append(data_embedding_variation)\n",
     "\n",
@@ -233,9 +233,7 @@
    ],
    "source": [
     "total_consumption_per_embedding_type = embedding_variation_runs.groupby(\"model\").sum()\n",
-    "total_consumption_smallest_embedding = (\n",
-    "    embedding_variation_runs.groupby(\"model\").sum().iloc[2, :]\n",
-    ")\n",
+    "total_consumption_smallest_embedding = embedding_variation_runs.groupby(\"model\").sum().iloc[2, :]\n",
     "\n",
     "consumption_ratio = total_consumption_per_embedding_type / total_consumption_smallest_embedding\n",
     "consumption_ratio = consumption_ratio.sort_values(\"duration [s]\")\n",
@@ -256,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +275,7 @@
     "plt.ylabel(\"relative value\")\n",
     "plt.xlabel(\"\")\n",
     "plt.title(\"Measurements in relation to gte-small\")\n",
-    "fig.savefig(\"./x.png\", dpi=500)"
+    "fig.savefig(\"./figures/measurements_in_relation_to_gte_small.png\", dpi=500, bbox_inches=\"tight\")"
    ]
   },
   {
@@ -297,9 +295,7 @@
     }
    ],
    "source": [
-    "compute_wilcoxon(\n",
-    "    embedding_variation_runs, \"gte-small\", \"gte-base\", \"GPU Energy [J]\", \"model\"\n",
-    ")"
+    "compute_wilcoxon(embedding_variation_runs, \"gte-small\", \"gte-base\", \"GPU Energy [J]\", \"model\")"
    ]
   },
   {
@@ -319,9 +315,7 @@
     }
    ],
    "source": [
-    "compute_wilcoxon(\n",
-    "    embedding_variation_runs, \"gte-base\", \"gte-large\", \"GPU Energy [J]\", \"model\"\n",
-    ")"
+    "compute_wilcoxon(embedding_variation_runs, \"gte-base\", \"gte-large\", \"GPU Energy [J]\", \"model\")"
    ]
   },
   {
@@ -341,9 +335,7 @@
     }
    ],
    "source": [
-    "compute_wilcoxon(\n",
-    "    embedding_variation_runs, \"gte-small\", \"gte-base\", \"duration [s]\", \"model\"\n",
-    ")"
+    "compute_wilcoxon(embedding_variation_runs, \"gte-small\", \"gte-base\", \"duration [s]\", \"model\")"
    ]
   },
   {
@@ -363,9 +355,7 @@
     }
    ],
    "source": [
-    "compute_wilcoxon(\n",
-    "    embedding_variation_runs, \"gte-base\", \"gte-large\", \"duration [s]\", \"model\"\n",
-    ")"
+    "compute_wilcoxon(embedding_variation_runs, \"gte-base\", \"gte-large\", \"duration [s]\", \"model\")"
    ]
   }
  ],
